--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -95,6 +95,13 @@
                 z-index: 300;
             }
 
+            a {
+                text-decoration: none;
+                color: var(--black);
+                text-align: center;
+                font-size: var(--second-body-mobile-tablet);
+            }
+
             .bg-decoration {
                 background-color: var(--light-gray);
                 width: 100%;
